--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.3.3@stable",
-        "silverstripe-themes/simple": "~3.2.0"
+        "symbiote/silverstripe-gridfieldextensions": "^3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
