--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "silverstripe/installer",
-    "type": "silverstripe-recipe",
-    "description": "The SilverStripe Framework Installer",
+    "name": "app/myproject",
+    "type": "silverstripe-project",
+    "description": "SilverStripe Demo",
     "require": {
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1.2",
@@ -15,7 +15,7 @@
         "project-files-installed": [
             "app/.htaccess",
             "app/_config.php",
-            "app/_config/mysite.yml",
+            "app/_config/app.yml",
             "app/src/Page.php",
             "app/src/PageController.php"
         ],
